fixed z-index on hover in gallery

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -99,7 +99,7 @@
   }
 
   &__value {
-    display: block;
+    display: inline-block;
 
     font-weight: 400;
     font-size: 16px;
