--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -41,6 +41,7 @@
     }
 
     &:hover {
+      z-index: 1;
       transform: scale(1.1);
     }
   }
